Added Azure Event Hubs Sample Config